Sun Dec 27 10:03:14 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/depend (enc, trans): fix version dependency, shared object
	  files depend on the RUBY_SO_NAME value for runtime link.

Sun Dec 27 09:47:20 2015  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_vstr2wc, ole_variant2val): fix blank
	  string conversion.
	  [Bug #11880]
	  Thanks Akio Tajima for the patch!

Sun Dec 27 09:34:53 2015  craft4coder  <yooobuntu@163.com>

	* doc/extension.rdoc: [DOC] `nul` should be uppercase.
	  change 'nul' => 'NUL'.  [Fix GH-1172]

Sat Dec 26 18:29:01 2015  Kouhei Sutou  <kou@cozmixng.org>

	* lib/xmlrpc/client.rb: Support SSL options in async methods of
	  XMLRPC::Client.
	  [Bug #11489]
	  Reported by Aleksandar Kostadinov. Thanks!!!

Sat Dec 26 11:26:38 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* miniinit.c (Init_enc): add some common aliases of built-in
	  encodings.  [ruby-core:72481] [Bug #11872]

Sat Dec 26 01:24:40 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, version.h (RUBY_PROGRAM_VERSION): extract version
	  numbers from API version in include/ruby/version.h except for
	  TEENY, to save matz job next year.

	* win32/setup.mak (-version-): use program version.

Fri Dec 25 22:43:26 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: extract RUBY_RELEASE_DAY at generating Makefile.

	* version.h (RUBY_RELEASE_DATE): construct from RUBY_RELEASE_YEAR,
	  RUBY_RELEASE_MONTH, and RUBY_RELEASE_DAY.

Fri Dec 25 21:33:06 2015  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* version.h (RUBY_VERSION): 2.4.0 development has started.

Fri Dec 25 14:12:12 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* doc/ChangeLog-2.3.0, ext/tk/lib/tkextlib/SUPPORT_STATUS,
	  include/ruby/version.h: minor grammar fixes [ci skip]

Fri Dec 25 08:23:22 2015  Tadashi Saito  <tadashi_saito@dwango.co.jp>

	* compile.c, cont.c, doc, man: fix common misspelling.
	  [ruby-core:72466] [Bug #11870]

